// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:dropdown-button 1`] = `
<div>
  <div
    class="cxd-DropDown  is-opened show"
  >
    <button
      class="cxd-Button cxd-Button--primary cxd-Button--size-default"
    >
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
    <ul
      class="cxd-DropDown-menu-root cxd-DropDown-menu"
      style="width: 0px;"
    >
      <li
        class="cxd-DropDown-button"
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
      <li
        class="cxd-DropDown-button"
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button 2`] = `
<div>
  <div
    class="cxd-DropDown  show"
  >
    <button
      class="cxd-Button cxd-Button--primary cxd-Button--size-default"
    >
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 1`] = `
<div>
  <div
    class="cxd-DropDown  cxd-DropDown--block"
  >
    <button
      class="cxd-Button cxd-Button--default cxd-Button--block cxd-Button--size-default"
    >
      下拉菜单
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with block & size 2`] = `
<div>
  <div
    class="cxd-DropDown "
  >
    <button
      class="cxd-Button cxd-Button--default cxd-Button--size-lg"
    >
      下拉菜单
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with buttons group 1`] = `
<div>
  <div
    class="cxd-DropDown  is-opened"
  >
    <button
      class="cxd-Button cxd-Button--default cxd-Button--size-default"
    >
      下拉菜单
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
    <ul
      class="cxd-DropDown-menu-root cxd-DropDown-menu"
      style="width: 0px;"
    >
      <div
        class="cxd-DropDown-menu"
      >
        <li
          class="cxd-DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            RD
          </span>
        </li>
        <li
          class="cxd-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              前端FE
            </span>
          </a>
        </li>
        <li
          class="cxd-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              后端RD
            </span>
          </a>
        </li>
      </div>
      <div
        class="cxd-DropDown-menu"
      >
        <li
          class="cxd-DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            QA
          </span>
        </li>
        <li
          class="cxd-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              测试QA
            </span>
          </a>
        </li>
        <li
          class="cxd-DropDown-button is-disabled"
        >
          <a
            class=""
            disabled=""
          >
            <span>
              交付测试DQA
            </span>
          </a>
        </li>
        <li
          class="cxd-DropDown-divider"
        />
      </div>
      <div
        class="cxd-DropDown-menu"
      >
        <li
          class="cxd-DropDown-groupTitle"
        >
          <i
            class="fa fa-user m-r-xs fa fa-user"
          />
          <span>
            Manager
          </span>
        </li>
        <li
          class="cxd-DropDown-button"
        >
          <a
            class=""
          >
            <span>
              项目经理PM
            </span>
          </a>
        </li>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with closeOnClick & closeOnOutside 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-DropDown  is-opened"
          >
            <button
              class="cxd-Button cxd-Button--default cxd-Button--size-default"
            >
              下拉菜单
              <span
                class="cxd-DropDown-caret"
              >
                <icon-mock
                  classname="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
            </button>
            <ul
              class="cxd-DropDown-menu-root cxd-DropDown-menu"
              style="width: 0px;"
            >
              <li
                class="cxd-DropDown-button"
              >
                <a
                  class=""
                >
                  <span>
                    按钮1
                  </span>
                </a>
              </li>
              <li
                class="cxd-DropDown-button"
              >
                <a
                  class=""
                >
                  <span>
                    按钮2
                  </span>
                </a>
              </li>
            </ul>
          </div>
          <button
            class="cxd-Button cxd-Button--default cxd-Button--size-default"
            type="button"
          >
            <span>
              outside
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with hideCaret 1`] = `
<div>
  <div
    class="cxd-DropDown "
  >
    <button
      class="cxd-Button cxd-Button--link cxd-Button--size-default"
    >
      <i
        class="fa fa-ellipsis-h icon m-r-xs fa fa-ellipsis-h"
      />
      下拉菜单
    </button>
  </div>
</div>
`;

exports[`Renderer:dropdown-button with icon & rightIcon 1`] = `
<div>
  <div
    class="cxd-DropDown "
  >
    <button
      class="cxd-Button cxd-Button--default cxd-Button--size-default"
    >
      <i
        class="fa fa-home icon m-r-xs fa fa-home"
      />
      下拉菜单
      <i
        class="fa fa-ellipsis-v icon m-l-xs fa fa-ellipsis-v"
      />
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-right-arrow-bold"
          icon="right-arrow-bold"
        />
      </span>
    </button>
  </div>
</div>
`;
